modify some UI error

--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -440,7 +440,7 @@
   "not_valid_public_key": "정상적인 공유키가 아닙니다.",
   "setting": "설정",
   "language": "언어",
-  "hynPriceUnit": "CNY",
+  "hynPriceUnit": "USD",
   "hynPriceUnitSymbol": "\$",
   "cafe": "커피숍",
   "hospital": "병원",
@@ -448,7 +448,7 @@
   "other_area": "기타지역",
   "app_area_setting": "지역",
   "please_selecte_app_area": "지도사용영역을설정하십시오.",
-  "hyperion_project_intro_url": "https://shimo.im/docs/GDp72cj3ATwEB7ke/read",
+  "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
   "task_interval_below_limit": "임무수행간격이 30분미만입니다.",
   "today_complete_hint": "오늘임무는완료하였습니다.데이터를 기여해주셔서 감사합니다.",
   "psw_reset_error_hint": "비밀번호재설정오류",
@@ -469,7 +469,7 @@
   "over_limit_hint": "제한초과",
   "check_in_completed": "완성",
   "hashrate": "계산력",
-  "scan_wifi_map_style_url": "https://cn.tile.map3.network/see-it-all-boundary-cdn-en.json",
+  "scan_wifi_map_style_url": "https://static.hyn.space/maptiles/see-it-all-boundary-cdn-en.json",
   "maprich_intro_url": "${rich_domain}intro?lang=ko",
   "actual_amount_received":"(수령 한 실제 금액을 기준으로)",
   "get_current_position_fail_tips": "현재 위치를 얻을 수 없습니다",
