--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -257,5 +257,6 @@
   "other_area": "Others",
   "app_area_setting": "Area",
   "please_selecte_app_area": "Please set the region of the map",
-  "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412"
+  "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
+  "click_again_to_exist_app": "press again to exit app"
 }
