--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -258,5 +258,17 @@
   "app_area_setting": "区域",
   "please_selecte_app_area": "请设置地图使用区域",
   "hyperion_project_intro_url": "https://shimo.im/docs/GDp72cj3ATwEB7ke/read",
-  "click_again_to_exist_app": "再按一下退出程序"
+  "click_again_to_exist_app": "再按一下退出程序",
+  "scan_name_wifi": "WiFi",
+  "scan_name_cellular": "基站",
+  "scan_name_bluetooth": "蓝牙",
+  "scan_name_gps": "GPS",
+  "scan_name_start" : "开始",
+  "scan_name_title" : "信号扫描",
+  "scan_confirm_upload" : "确认上传",
+  "scan_signal_upload_protocol" : "信号上传协议",
+  "scan_exit_tips" : "正在扫描中，确认退出吗?",
+  "scan_hyn_is_empty" : "HYN wallet 为空",
+  "scan_finish" : "扫描已完成",
+  "scan_ing_func": "正在${scanName}信号扫描"
 }
