--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -258,5 +258,20 @@
   "app_area_setting": "Area",
   "please_selecte_app_area": "Please set the region of the map",
   "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
-  "click_again_to_exist_app": "press again to exit app"
+  "click_again_to_exist_app": "press again to exit app",
+  "data_contrebution_with_hyn_wallet_tips": "Data contribution requires a HYN wallet address. Please create or import a HYN wallet first.",
+  "scan_signal_item_title": "Scan nearby signal data",
+  "add_poi_item_title": "Add POI information",
+  "check_poi_item_title": "Verify POI information",
+  "switch_contribute_address": "Switch",
+  "require_permission": "Apply for permission",
+  "collect_signal_require_telephone": "To collect signal data, you need to obtain phone permissions",
+  "open_bluetooth": "Turn on Bluetooth",
+  "please_open_bluetooth": "Please turn on Bluetooth",
+  "open_wifi": "Turn on WIFI",
+  "please_open_wifi": "Please turn on WIFI",
+  "require_location": "Apply for positioning permission",
+  "require_location_message": "Please authorize the use of positioning permissions",
+  "open_location_service": "Turn on location services",
+  "open_location_service_message": "Location services are off, please turn on"
 }
