--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -258,5 +258,20 @@
   "app_area_setting": "구역",
   "please_selecte_app_area": "지도 사용 구역을 설정하십시오",
   "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
-  "click_again_to_exist_app": "다시 누르면 앱이 종료됩니다"
+  "click_again_to_exist_app": "다시 누르면 앱이 종료됩니다",
+  "data_contrebution_with_hyn_wallet_tips": "데이터 기여는 HYN 주소가 필요합니다. 먼저 HYN 지갑을 만드거나 가져오십시오.",
+  "scan_signal_item_title": "인근 신호 데이터 검색",
+  "add_poi_item_title": "관찰 위치 정보 추가",
+  "check_poi_item_title": "지리적 위치 정보를 검사하다.",
+  "switch_contribute_address": "주소 전환",
+  "require_permission": "신청 권한",
+  "collect_signal_require_telephone": "신호 데이터를 수집하기 위해서는 전화 권한이 필요합니다.",
+  "open_bluetooth": "블루투스 열림",
+  "please_open_bluetooth": "블루투스를 여세요.",
+  "open_wifi": "WIFI 시작하기",
+  "please_open_wifi": "WIFI를 켜세요.",
+  "require_location": "위치 라이센스 신청",
+  "require_location_message": "위치 확인 기능을 사용할 수 있는 권한을 부여해 주십시오.",
+  "open_location_service": "위치추적 서비스 열기",
+  "open_location_service_message": "위치정보 서비스가 닫혔습니다. 켜주세요"
 }
