--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -258,5 +258,20 @@
   "app_area_setting": "区域",
   "please_selecte_app_area": "请设置地图使用区域",
   "hyperion_project_intro_url": "https://shimo.im/docs/GDp72cj3ATwEB7ke/read",
-  "click_again_to_exist_app": "再按一下退出程序"
+  "click_again_to_exist_app": "再按一下退出程序",
+  "data_contrebution_with_hyn_wallet_tips": "数据贡献需要有HYN地址，请先创建 或导入HYN钱包。",
+  "scan_signal_item_title": "扫描附近信号数据",
+  "add_poi_item_title": "添加地理位置信息",
+  "check_poi_item_title": "校验地理位置信息",
+  "switch_contribute_address": "切换地址",
+  "require_permission": "申请权限",
+  "collect_signal_require_telephone": "采集信号数据，需要获取电话权限",
+  "open_bluetooth": "开启蓝牙",
+  "please_open_bluetooth": "请开启蓝牙",
+  "open_wifi": "开启WIFI",
+  "please_open_wifi": "请开启WIFI",
+  "require_location": "申请定位授权",
+  "require_location_message": "请你授权使用定位功能.",
+  "open_location_service": "打开定位服务",
+  "open_location_service_message": "定位服务已关闭，请开启"
 }
