Contribute  map data is on

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -89,7 +89,7 @@
   "Hyperion": "Hyperion",
   "project_introduction": "Project Brief",
   "data_contribute": "Data Contribution",
-  "data_contribute_reward": "Contribute map data to earn HYN rewards",
+  "data_contribute_reward": "Contribute your map data",
   "coming_soon": "Coming Soon",
   "foods": "Foods",
   "hotel": "Hotel",
