--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -89,7 +89,7 @@
   "Hyperion": "하이보리안",
   "project_introduction": "프로젝트 소개",
   "data_contribute": "데이터 공헌",
-  "data_contribute_reward": "기여도 데이터 HYN 장려 받음",
+  "data_contribute_reward": "지도 데이터 제공",
   "coming_soon": "곧 개방될 것이다",
   "foods": "식당",
   "hotel": "호텔",
