--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -89,7 +89,7 @@
   "Hyperion": "海伯利安",
   "project_introduction": "项目介绍",
   "data_contribute": "数据贡献",
-  "data_contribute_reward": "贡献地图数据获得HYN奖励",
+  "data_contribute_reward": "已开放地图数据贡献",
   "coming_soon": "即将开放",
   "foods": "美食",
   "hotel": "酒店",
