--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -274,16 +274,20 @@
   "require_location_message": "위치 확인 기능을 사용할 수 있는 권한을 부여해 주십시오.",
   "open_location_service": "위치추적 서비스 열기",
   "open_location_service_message": "위치정보 서비스가 닫혔습니다. 켜주세요",
-  "scan_name_wifi": "WiFi",
-  "scan_name_cellular": "基站",
+  "scan_name_wifi": "와이파이",
+  "scan_name_cellular": "기지국",
   "scan_name_bluetooth": "기지국",
   "scan_name_gps": "GPS",
   "scan_name_start" : "시작",
   "scan_name_title" : "신호 스윕",
-  "scan_confirm_upload" : "업로드 확인",
   "scan_signal_upload_protocol" : "신호 업로드 프로토콜",
   "scan_exit_tips" : "스캔 진행 중, 종료 확인?",
   "scan_hyn_is_empty" : "HYN 지갑이 비어 있습니다",
   "scan_finish" : "스캔 완료",
-  "scan_ing_func": "${scanName} 스캔 중"
+  "scan_ing_func": "${scanName} 스캔 중",
+  "scan_upload_error" : "업로드 실패",
+  "scan_upload_signal_success_hint": "신호 데이터가 성공적으로 업로드되었습니다",
+  "scan_thanks_contribution_signal_hint": "귀하의 데이터 기여에 감사드립니다！",
+  "scan_confirm_upload" : "신호 데이터 업로드",
+  "scan_collect_signal_func": "${Num} 개의 신호 수집"
 }
