--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -280,10 +280,14 @@
   "scan_name_gps": "GPS",
   "scan_name_start" : "Start",
   "scan_name_title" : "Signal scan",
-  "scan_confirm_upload" : "Confirm upload",
   "scan_signal_upload_protocol" : "Signal upload protocol",
   "scan_exit_tips" : "Scanning, confirm exit?",
   "scan_hyn_is_empty" : "HYN wallet is empty",
   "scan_finish" : "Scan completed",
-  "scan_ing_func": "Scanning for ${scanName}"
+  "scan_ing_func": "Scanning for ${scanName}",
+  "scan_upload_error" : "Upload failed",
+  "scan_upload_signal_success_hint": "Signal data uploaded successfully",
+  "scan_thanks_contribution_signal_hint": "Thank you for your data contribution！",
+  "scan_confirm_upload" : "Upload signal data",
+  "scan_collect_signal_func": "${Num} signals collected"
 }
