--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -1,262 +1,262 @@
 {
   "app_name": "타이탄",
-  "network_request_err": "网络请求错误,状态码: $code",
-  "route": "노선",
-  "no_recommended_route": "추천 경로가 없습니다",
-  "less_than_1_min": "일분 미만",
+  "network_request_err": "네트워크 요청 오류가 있습니다,상태 코드번호: $code",
+  "route": "루트",
+  "no_recommended_route": "추천 루트가 없습니다.",
+  "less_than_1_min": "1분이내",
   "n_day": "${day}일",
   "n_hour": "${hour}시간",
   "n_minute": "${minute}분",
   "km": "${km}킬로미터",
-  "distance": "${distance}남",
-  "official_website": "공식 웹 사이트",
-  "forum": "받는 사람",
-  "telegram": "전보",
-  "twitterhyperion": "지저귀다-히페리온",
-  "twittertitan": "지저귀다-타이탄",
-  "medium": "Medium",
-  "wechat": "위챗",
-  "wechat_official_account": "서비스 번호",
-  "telegram_operator": "Telegram Operator",
-  "wechat_cs": "위챗 고객 서비스",
-  "new_update_available": "새 버전 발견",
-  "update_now": "지금 업데이트",
-  "later": "아직 업데이트되지 않았습니다",
-  "downloading_update_file": "업데이트 파일 다운로드",
-  "installation_update_package_failed": "업데이트 패키지 설치 실패",
-  "install_now": "지금 설치",
-  "app_version": "버전",
-  "about_us": "우리에 대해",
-  "nav_my_privacy_map": "내 프라이버시 맵",
-  "main_my_public_key": "암호화 된 주소 (공개 키)",
-  "public_key_copied": "공개 키 주소가 복사되었습니다",
-  "nav_share_app": "앱 공유",
-  "nav_about_us": "우리에 대해",
-  "search_title": "검색 / 디코딩",
-  "key_manager_title": "암호화 된 주소",
-  "manually_refresh": "수동 새로 고침",
+  "distance": "${distance}미터",
+  "official_website": "공식 홈페이지",
+  "forum": "포럼",
+  "telegram": "텔레그램",
+  "twitterhyperion": "트위트 하이페리온",
+  "twittertitan": "트위터-타이탄",
+  "medium": "중간",
+  "wechat": "위쳇",
+  "wechat_official_account": "위쳇 서비스번호",
+  "telegram_operator": "텔레그람 운영자",
+  "wechat_cs": "위챗 고객센타",
+  "new_update_available": "새로운 버전을 발견하였습니다.",
+  "update_now": "업데이트중입니다.",
+  "later": "업데이트를 하지 않습니다.",
+  "downloading_update_file": "업데이트 파일 다운로드중입니다.",
+  "installation_update_package_failed": "업데이트 패키지를 설치하지 못했습니다.",
+  "install_now": "바로 설치합니다.",
+  "app_version": "어플버전",
+  "about_us": "우리에 대해서",
+  "nav_my_privacy_map": "나의 개인정보 지도",
+  "main_my_public_key": "나의 암호화 주소(공유키)",
+  "public_key_copied": "공유키 주소를 복사완료하였습니다.",
+  "nav_share_app": "App 공유",
+  "nav_about_us": "우리에 대해서",
+  "search_title": "검색/디코딩",
+  "key_manager_title": "나의 암호화 주소",
+  "manually_refresh": "수동으로 새로 고침",
   "share": "공유",
-  "tips": "힌트",
-  "refresh_keypaire_message": "공개 키 주소를 새로 고친 후에는 이전에 수신 한 위치 암호문이 절대 해독되지 않습니다! 계속 새로 고침 하시겠습니까?",
+  "tips": "제시",
+  "refresh_keypaire_message": "공유키 주소를 새로 고치기하면 이전에 받았던 위치의 암호화 문서는 영구적으로 복구할수 없습니다.새로 고치기를 계속하시겠습니까?",
   "cancel": "취소",
-  "confirm": "OK",
-  "share_qrcode": "공개 키 QR 코드 공유",
-  "share_fail": "오류 공유",
+  "confirm": "확정",
+  "share_qrcode": "공유키 QR코드 공유",
+  "share_fail": "공유 오류가 발생했습니다.",
   "share_location": "위치 공유",
-  "driving": "드라이브",
-  "cycling": "타기",
-  "walking": "걷기",
-  "share_encrypted_location": "암호화 된 위치 공유",
-  "add_share_options": "공유 옵션",
-  "accept_share_pub_key": "피어 투 피어 공유",
-  "receiver_encrypted_address": "수신자 암호화 주소 (공개 키)",
-  "postscript": "포스트 스크립트",
-  "postscript_hint": "첨자를 입력하십시오 (50 단어 이내).",
-  "public_key_scan_fail_rescan": "잘못된 공개 키입니다. 다시 스캔하십시오",
-  "open_camera": "카메라 권한을 켜십시오",
+  "driving": "차량 운전",
+  "cycling": "사이클링",
+  "walking": "보행",
+  "share_encrypted_location": "암호화 위치 공유",
+  "add_share_options": "선택사항 공유",
+  "accept_share_pub_key": "P2P 공유",
+  "receiver_encrypted_address": "공유키",
+  "postscript": "부언",
+  "postscript_hint": "부언 입력(50자이내로)",
+  "public_key_scan_fail_rescan": "공유키 오류가 발생했습니다.다시 스캔해 주십시오",
+  "open_camera": "카메라 권한을 열어주십시오.",
   "unknown_error": "Unknown error",
-  "share_invalid_public_key": "잘못된 공개 키",
+  "share_invalid_public_key": "무효한 공유키",
   "encrypt_error": "암호화 실패",
-  "label": "태그",
+  "label": "라벨",
   "telphone": "전화",
-  "search_empty_data": "데이터가 없습니다",
-  "decrypt_location_cipher_tips": "위치 암호문을 해독하는 방법?",
-  "decrypt_location_cipher_tips_context": "암호문을 붙여넣고 검색을 클릭하여 암호문을 해독하십시오.",
-  "input_search_keyworod_or_cipher": "검색어 / 암호문 입력",
-  "search_history": "역사 검색",
-  "clean_search_history": "기록 지우기",
-  "generating_key": "암호화 된 주소 생성 ...",
-  "refresh_public_key_days_tips": "%d일 후 자동 새로 고침",
-  "refresh_public_key_hours_tips": "%d시간 %d분 후 자동 새로 고침",
-  "refresh_public_key_minutes_tips": "%d분 후 자동 새로 고침",
-  "refresh_public_key_seconds_tips": "%d초 후 자동 새로 고침",
-  "improvement_plan_message": "타이탄 을 사용하는 동안 더 나은 사용자 경험을 제공하기 위해 제품 품질을 개선하는 데 도움이되는 사용자 경험 개선 프로그램에 초대되었습니다.세부 사항보기\n        <b>\n            <a href=\"https://www.hyn.space/titan/privacy_policy/\">계획 설명</a>\n        </b>",
-  "improvement_plan_agree": "참여 계획",
-  "improvement_plan_refuse": "참여하지 않음",
+  "search_empty_data": "데이터가 없습니다.",
+  "decrypt_location_cipher_tips": "암호화 위치 문서를 어떻게 해제합니까?",
+  "decrypt_location_cipher_tips_context": "암호화 위치문서를 붙히기 하신후 검색을 클릭하시면 암호화 문서를 바로 해제할수 있습니다.",
+  "input_search_keyworod_or_cipher": "검색 키워드/암호화 문서를 입력해주세요.",
+  "search_history": "검색 내역",
+  "clean_search_history": "기록 삭제",
+  "generating_key": "암호화 주소 생성중입니다.",
+  "refresh_public_key_days_tips": "%d일후 자동으로 새로 고침합니다.",
+  "refresh_public_key_hours_tips": "%d시간%d분후 자동으로 새로 고침합니다.",
+  "refresh_public_key_minutes_tips": "%d분후 자동으로 새로 고침합니다.",
+  "refresh_public_key_seconds_tips": "%d초후 자동으로 새로 고침합니다.",
+  "improvement_plan_message": "Titan 사용 과정에서 고객님들께 더 나은 사용 환경을 제공하기 위하여 당신을 제품 품질 향상을 위한 개선된 사용자 경험 프로그램에 초대합니다상세한 내용은\n<b>\n<a href=\"https://www.hyn.space/titan/privacy_policy/\">프로그램 설명서를 참조하시기 바랍니다.</a>\n</b>",
+  "improvement_plan_agree": "프로그램 참여",
+  "improvement_plan_refuse": "참여 안함",
   "improvement_plan_title": "체험 프로그램 개선",
-  "skip": "건너 뛰기",
-  "Next": "다음 페이지",
-  "enter": "입력",
-  "copyed": "복사",
-  "Clean": "명확한 흔적",
+  "skip": "건너뛰기",
+  "Next": "다음",
+  "enter": "들어가기",
+  "copyed": "복사 완료",
+  "Clean": "흔적 지우기",
   "time": "영업 시간",
   "services": "서비스",
   "remark": "비고",
-  "search_or_decode": "검색 / 디코딩",
-  "map3_global_nodes": "map3 글로벌 노드",
+  "search_or_decode": "암호화 문서 검색/해제",
+  "map3_global_nodes": "map3글로벌 노드",
   "global_nodes": "글로벌 노드",
-  "global_map_server_nodes": "글로벌 맵 서비스 노드",
-  "Hyperion": "하이보리안",
+  "global_map_server_nodes": "글로벌 지도 서비스 노드",
+  "Hyperion": "하이페리온",
   "project_introduction": "프로젝트 소개",
-  "data_contribute": "데이터 공헌",
-  "data_contribute_reward": "지도 데이터 제공",
-  "coming_soon": "곧 개방될 것이다",
-  "foods": "식당",
+  "data_contribute": "데이터 기여",
+  "data_contribute_reward": "지도 데이터 기여로 HYN 인센티브 획득",
+  "coming_soon": "곧 오픈합니다.",
+  "foods": "미식",
   "hotel": "호텔",
-  "attraction": "관광 명소",
+  "attraction": "관광지",
   "paking": "주차장",
   "gas_station": "주유소",
   "bank": "은행",
   "supermarket": "슈퍼마켓",
-  "mall": "백화점",
+  "mall": "쇼핑몰",
   "toilet": "화장실",
-  "internet_bar": "인터넷 카페",
-  "home_page": "홈",
+  "internet_bar": "PC방",
+  "home_page": "메인 페이지",
   "wallet": "지갑",
   "discover": "발견",
-  "information": "정보",
-  "my_page": "나의",
+  "information": "뉴스",
+  "my_page": "내페이지",
   "hyn_market": "HYN 시세",
-  "view_all": "모두 보기",
+  "view_all": "전체 보기",
   "hyn_price": "HYN 지수",
   "online_exchange": "온라인 거래소",
-  "rmb": " CNY",
-  "map3_node_introduction": "map3 노드",
-  "private_and_safety": "비밀과 보안",
-  "create_wallet": "지갑 만들기",
+  "rmb": "인민페",
+  "map3_node_introduction": "map3노드",
+  "private_and_safety": "프라이버시와 안전",
+  "create_wallet": "지갑 새로 만들기",
   "import_wallet": "지갑 가져오기",
-  "private_wallet_tips": "계정 비밀 키는 장치를 떠나지 않습니다",
-  "create_wallet_tips": "비밀 계정 만들기",
-  "create_wallet_name_label": "지갑 이름",
-  "input_wallet_name_hint": "지갑 이름을 입력하십시오",
-  "input_wallet_name_length_hint": "6 비트 이내의 이름을 입력하십시오",
+  "private_wallet_tips": "프라이빗 계좌.",
+  "create_wallet_tips": "프라이빗 계좌 새로반들기",
+  "create_wallet_name_label": "지갑 명칭",
+  "input_wallet_name_hint": "지갑 명칭을 입력해주십시오.",
+  "input_wallet_name_length_hint": "6자리이내의 명칭을 입력해 주십시오.",
   "create_wallet_password_label": "지갑 비밀번호",
-  "input_wallet_password_length_hint": "최소 6 비트 비밀번호를 입력하십시오.",
-  "reinput_wallet_password_label": "암호 확인",
-  "input_password_again_hint": "비밀번호를 다시 입력하십시오",
-  "password_not_equal_hint": "암호가 일치하지 않습니다.",
-  "input_confirm_wallet_password_hint": "지갑 비밀번호 최소 6자리를 다시 입력하십시오",
+  "input_wallet_password_length_hint": "최소 6자리수이상의 비밀번호를 입력해주십시오.",
+  "reinput_wallet_password_label": "비밀번호 확인",
+  "input_password_again_hint": "비밀번호를 다시 한번 입력해주십시오.",
+  "password_not_equal_hint": "비밀번호가 불일치합니다.",
+  "input_confirm_wallet_password_hint": "최소 6자리수이상의 지갑 비밀번호를 다시 한번 입력해 주십시오.",
   "next": "계속",
-  "account_backup_notice": "지금 계정을 백업합니다",
-  "account_backup_next_step_notice": "다음 단계에서 계정을 복구하는 데 사용할 단어 12개를 볼 수 있습니다",
-  "lossz_wallet_mnemonic_notice": "복구 단어를 잃어 버리면 지갑에 액세스 할 수 없다는 것을 이해합니다",
+  "account_backup_notice": "당신의 계좌를 백업중입니다.",
+  "account_backup_next_step_notice": "다음 단계에서 당신은 당신의 계좌를 복원하도록 허용하는 12개의 단어를 보게 될것입니다.",
+  "lossz_wallet_mnemonic_notice": "알겠습니다.만약 제가 복원 단어를 잃어버리면 돈을 액세스할수 없다는것을 알고있습니다.",
   "continue_text": "계속",
-  "your_mnemonic": "복원된 메시지",
-  "save_mnemonic_notice": "이 단어들을 정확한 순서에 따라 기록하거나 복사한 후 안전한 곳에 보관하세요.",
-  "save_mnemonic_safe_notice": "복구된 메시지를 아무에게도 공유하지 말고 안전하게 저장하세요!",
-  "confirm_mnemonic": "복원된 텍스트를 입력하십시오",
-  "confirm_mnemonic_tips": "단어를 클릭해서 올바른 순서에 따라",
-  "confirm_mnemonic_incorrect": "텍스트가 올바르지 않습니다. 다시 시도하십시오",
-  "wallet_create_success": "계정 만들기 성공",
-  "wallet_create_success_tips": "축하합니다. 귀하의 개인 계정이 성공적으로 생성되었습니다",
-  "user_this_account": "이 개인 계정을 사용하십시오",
-  "import_account": "계정 가져 오기",
-  "illegal_mnemonic": "단어들이 올바르지 않습니다.",
-  "input_resume_mnemonic": "백업 단어를 공백으로 구분하여 입력하십시오",
-  "please_input_mnemonic": "복원된 단어를 입력하십시오",
-  "paste": "붙여 넣기",
-  "wallet_name_label": "지갑 이름",
+  "your_mnemonic": "당신의 복원 단어",
+  "save_mnemonic_notice": "올바른 순서로 이 단어를 기록하거나 복사하여 안전한 곳에 보관하십시오.",
+  "save_mnemonic_safe_notice": "복원 단어를 그 누구와도 공유하지 말고 안전하게 저장하십시오!",
+  "confirm_mnemonic": "복원 단어를 입력해주십시오.",
+  "confirm_mnemonic_tips": "단어를 클릭하여 정확한 순서로 맞추세요.",
+  "confirm_mnemonic_incorrect": "복원 단어가 정확하지 않습니다.다시 시도하십시오.",
+  "wallet_create_success": "계정 새로 만들기 성공",
+  "wallet_create_success_tips": "축하드립니다.당신의 비밀 계정이 성공적으로 만들어졌습니다.",
+  "user_this_account": "비밀 계정 사용",
+  "import_account": "계정 가져오기",
+  "illegal_mnemonic": "정상적인 기호가 아닙니다.",
+  "input_resume_mnemonic": "뛰여쓰기로 구분된 백업 도움말을 입력해주십시오.",
+  "please_input_mnemonic": "도움말을 입력해주십시오.",
+  "paste": "붙히기",
+  "wallet_name_label": "지갑 명칭",
   "import_account_fail": "가져오기 실패",
   "import": "가져오기",
   "import_account_success": "계정 가져오기 성공",
-  "import_account_tips": "축하합니다. 비밀 지갑을 성공적으로 가져왔습니다",
+  "import_account_tips": "축하드립니다.당신의 비밀 지갑 가져오기에 성공하였습니다.",
   "wallet_manage": "지갑 관리",
   "wallet_setting": "지갑 설정",
-  "wallet_name": "지갑 이름",
-  "please_input_wallet_name": "지갑 이름을 입력하십시오",
-  "backup_option": "백업 옵션",
-  "show_mnemonic_label": "복원된 메시지 보이기",
-  "wallet_setting_backup_notice": "이 장치에 액세스 할 수 없으면 백업하지 않으면 자금이 복구되지 않습니다!",
-  "delete_wallet_success": "제거 성공",
+  "wallet_name": "지갑 명칭",
+  "please_input_wallet_name": "지갑 명칭을 입력해주십시오.",
+  "backup_option": "백업 선택사항",
+  "show_mnemonic_label": "복원 단어 보여주기",
+  "wallet_setting_backup_notice": "이 장비에 액세스할수 없다면 백업할때까지 자금 회수가 불가능합니다!",
+  "delete_wallet_success": "삭제 성공",
   "delete_wallet_fail": "삭제 실패",
-  "wallet_password_error": "암호 오류",
+  "wallet_password_error": "잘못된 비밀번호입니다.",
   "delete": "삭제",
-  "backup_notice_label": "백업 팁",
-  "backup_wallet_notice_text1": "니모닉 단어를 얻는 것은 지갑 자산의 소유권과 같습니다",
-  "backup_wallet_mnemonic_title": "백업 니모닉",
-  "backup_wallet_mnemonic_text": "니모닉을 올바르게 복사하려면 종이와 펜을 사용하십시오.\n휴대 전화를 분실했거나 도난당한 경우 손상, 니모닉으로 자산을 복구 할 수 있습니다",
-  "backup_offline_save_title": "오프라인 저장소",
-  "backup_offline_save_text": "격리 된 네트워크의 안전한 장소에 보관\n이메일, 사진 앨범, 소셜 애플리케이션 등과 같은 네트워크 환경에서 니모닉을 공유하지 마십시오.",
-  "extract_mnemonic_fail": "니모닉 실패를 추출",
-  "safety_verification": "보안 검증",
+  "backup_notice_label": "백업 제시",
+  "backup_wallet_notice_text1": "도움말을 얻는것은 지갑 자산 소유권을 갖는것과 같습니다.",
+  "backup_wallet_mnemonic_title": "도움말 백업하기",
+  "backup_wallet_mnemonic_text": "종이와 펜을 사용하여 도움말을 정확하게 기록하세요.\n 만일 휴대폰을 분실하거나 도난당하거나 혹은 파손됐을 경우 도움말을 통해 당신의 자산을 회복할수 있습니다.",
+  "backup_offline_save_title": "오프라인 보관",
+  "backup_offline_save_text": "네트워크와 분리된 안전한 곳에 잘 보관하십시오.\n이메일, 포토 앨범, 소셜 어플리케이션 등 네트워크 환경에서 도움말을 공유하거나 저장하지 마십시오.",
+  "extract_mnemonic_fail": "도움말 불러오기 실패",
+  "safety_verification": "보안 인증",
   "wallet_password_label": "지갑 비밀번호",
-  "please_input_wallet_password_hint": "지갑 비밀번호를 입력하십시오",
-  "backup_finish": "백업 완료",
-  "finish": "완료",
-  "send": "보내기",
-  "receiver": "받기",
+  "please_input_wallet_password_hint": "지갑 비밀번호를 입력해주십시오.",
+  "backup_finish": "백업완료",
+  "finish": "완성",
+  "send": "발송",
+  "receiver": "접수",
   "copy": "복사",
-  "received": "받았습니다",
-  "sent": "보냄",
-  "contract_call": "스마트 계약 전화",
-  "account_error": "계정 오류",
-  "send_symbol": "보내기 $symbol",
-  "receiver_address": "받는 사람 주소",
-  "receiver_address_not_empty_hint": "수신 주소는 비워 둘 수 없습니다",
+  "received": "접수하였습니다.",
+  "sent": "발송하였습니다.",
+  "contract_call": "스마트 콘트랙트 호출",
+  "account_error": "계정오류",
+  "send_symbol": "발송 $symbol",
+  "receiver_address": "수신자주소",
+  "receiver_address_not_empty_hint": "접수주소가비어서는안됩니다.",
   "send_count_label": "$symbol 수량",
-  "all": "모두",
-  "input_corrent_count_hint": "정확한 수량을 입력하십시오",
-  "input_count_over_balance": "균형 초과",
-  "account_is_empty": "계정이 비어 있음",
-  "gas_fee": "네트워크 요금",
-  "speed_slow": "느리게",
-  "speed_normal": "평균치",
-  "speed_fast": "빨리",
-  "please_waiting": "기다려주세요",
-  "transfer_submitted": "송금이 제출되었습니다",
-  "password_incorrect": "잘못된 비밀번호",
-  "transfer_fail": "전송 실패",
-  "eth_balance_not_enough_for_gas_fee": "ETH 잔액이 네트워크 요금을 지불하기에 충분하지 않습니다",
-  "receiver_symbol": "받기 ${symbol}",
-  "address_copied": "주소가 복사되었습니다",
-  "my_symbol_address": "광산${symbol}수신 주소:",
-  "dmap_document_title": "DMap지도 응용 프로그램 액세스 문서",
-  "document_optimization": "문서 최적화...",
-  "map_dmap": "그림 DMap",
-  "dmap_tools": "도구",
-  "private_sharing": "개인 공유",
-  "private_sharing_text": "암호화 된 위치 공유, 위치 정보 유출 방지",
-  "dmap_life": "생활 가이드",
-  "embassy_guide": "대사관 안내",
-  "global_embassies": "글로벌 대사관",
-  "stay_tuned": "계속 지켜봐 주시기 바랍니다",
+  "all": "전부",
+  "input_corrent_count_hint": "정확한수량을입력해주십시오.",
+  "input_count_over_balance": "잔액한도를초과하였습니다.",
+  "account_is_empty": "계정이비어있습니다.",
+  "gas_fee": "네트워크비용",
+  "speed_slow": "느린속도",
+  "speed_normal": "정상속도",
+  "speed_fast": "빠른속도",
+  "please_waiting": "잠시만기다려주십시오.",
+  "transfer_submitted": "계좌이체신청제출완료",
+  "password_incorrect": "잘못된비밀번호입니다.",
+  "transfer_fail": "계좌 이체실패",
+  "eth_balance_not_enough_for_gas_fee": "ETH잔액부족으로네트워크비용을지불할수없습니다.",
+  "receiver_symbol": "접수 ${symbol}",
+  "address_copied": "주소복사완료",
+  "my_symbol_address": "나의${symbol}접수주소:",
+  "dmap_document_title": "DMap 지도를문서에바인딩합니다.",
+  "document_optimization": "문서최적화중입니다.",
+  "map_dmap": "지도DMap",
+  "dmap_tools": "DMAP 도구",
+  "private_sharing": "프라이버시공유",
+  "private_sharing_text": "암호화위치를공유하시면절대로위치정보를누설하지않습니다.",
+  "dmap_life": "생활가이드",
+  "embassy_guide": "대사관가이드",
+  "global_embassies": "글로벌대사관",
+  "stay_tuned": "기대해주십시오.",
   "discount_map": "할인지도",
-  "not_open_yet": "기대하세요",
-  "police_security_station": "경찰 보안 국",
-  "police_station_text": "경찰을 찾는 데 어려움이있다",
-  "more_dmap": "더 많은 DMap 애플리케이션이 계속 추가되고 있습니다",
+  "not_open_yet": "아직개방하지않았습니다.",
+  "police_security_station": "경찰안전소",
+  "police_station_text": "어려움이있으면경찰을찾아주십시오.",
+  "more_dmap": "더많은 DMap 애플리케이션들이지속적으로추가됩니다 ~",
   "close": "닫기",
-  "start_encryption": "암호화",
-  "no_data": "데이터가 없습니다",
+  "start_encryption": "암호화시작",
+  "no_data": "데이터가없습니다.",
   "hot_area": "인기 지역",
   "recommended_area": "추천 지역",
-  "no_fill_in": "채우지 않음",
-  "private_service": "개인 서비스",
-  "service_hours": "서비스 시간",
+  "no_fill_in": "기록이없습니다.",
+  "private_service": "프라이버시서비스",
+  "service_hours": "서비스시간",
   "service_area": "지역",
   "service_description": "설명",
-  "nightlife_guide": "나이트 라이프 가이드",
-  "no_detail_address": "자세한 주소가 없습니다",
-  "department": "학과",
+  "nightlife_guide": "야간활동안내",
+  "no_detail_address": "자세한주소가없습니다.",
+  "department": "부서",
   "area": "지역",
-  "operating_hours": "근무 시간",
-  "kais_talk": "Kai's Talk",
-  "latest_news": "뉴스",
-  "official_announcement": "발표",
-  "information_guide": "안내서",
-  "information_video": "비디오",
-  "article": "기사",
-  "video": "비디오",
+  "operating_hours": "업무시간",
+  "kais_talk": "케이시 스토리",
+  "latest_news": "최신 뉴스",
+  "official_announcement": "공식 발표",
+  "information_guide": "설명 및 안내",
+  "information_video": "동영상",
+  "article": "문장",
+  "video": "동영상",
   "audio": "오디오",
-  "domestic_video": "국내",
-  "foreign_video": "해외",
-  "titan_encrypted_map_ecology": "Titan 암호화 된지도 생태",
-  "share_app": "앱 공유",
-  "dapp_setting": "DApp 설정",
-  "private_share": "개인 공유",
-  "private_share_receive_address": "수신 주소:${shortAddress}",
-  "navigation": "탐색",
-  "my_location": "내 위치",
+  "domestic_video": "국내동영상",
+  "foreign_video": "국외동영상",
+  "titan_encrypted_map_ecology": "Titan 암호화지도생태학",
+  "share_app": "app공유",
+  "dapp_setting": "DApp설정",
+  "private_share": "프리이버시공유",
+  "private_share_receive_address": "접수주소:${shortAddress}",
+  "navigation": "네비게이션",
+  "my_location": "나의위치",
   "setting": "설정",
   "language": "언어",
   "hynPriceUnit": "USD",
   "hynPriceUnitSymbol": "\$",
   "cafe": "커피숍",
   "hospital": "병원",
-  "mainland_china": "중국 대륙",
-  "other_area": "기타 지역",
-  "app_area_setting": "구역",
-  "please_selecte_app_area": "지도 사용 구역을 설정하십시오",
+  "mainland_china": "중국대륙",
+  "other_area": "기타지역",
+  "app_area_setting": "지역",
+  "please_selecte_app_area": "지도사용영역을설정하십시오.",
   "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
   "click_again_to_exist_app": "다시 누르면 앱이 종료됩니다",
   "data_contrebution_with_hyn_wallet_tips": "데이터 기여는 HYN 주소가 필요합니다. 먼저 HYN 지갑을 만드거나 가져오십시오.",
