--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -284,7 +284,7 @@
   "scan_exit_tips" : "正在扫描中，确认退出吗?",
   "scan_hyn_is_empty" : "HYN wallet 为空",
   "scan_finish" : "扫描完成",
-  "scan_ing_func": "正在${scanName}信号扫描",
+  "scan_ing_func": "正在扫描${scanName}信号",
   "scan_upload_error" : "上传失败",
   "scan_upload_signal_success_hint": "信号数据上传成功",
   "scan_thanks_contribution_signal_hint": "感谢您做的数据贡献！",
