update dashboard translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -83,9 +83,9 @@
   "services": "Services",
   "remark": "Notes",
   "search_or_decode": "Search / Decrypt",
-  "map3_global_nodes": "Map3 Global Nodes",
-  "global_nodes": "Global Nodes",
-  "global_map_server_nodes": "Global Map Service Nodes",
+  "map3_global_nodes": "Dashboard",
+  "global_nodes": "Dashboard",
+  "global_map_server_nodes": "View global data updates",
   "Hyperion": "Hyperion",
   "project_introduction": "Project Brief",
   "data_contribute": "Data Contribution",
