--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -83,9 +83,9 @@
   "services": "서비스",
   "remark": "비고",
   "search_or_decode": "암호화 문서 검색/해제",
-  "map3_global_nodes": "map3글로벌 노드",
-  "global_nodes": "글로벌 노드",
-  "global_map_server_nodes": "글로벌 지도 서비스 노드",
+  "map3_global_nodes": "계기반",
+  "global_nodes": "계기반",
+  "global_map_server_nodes": "실시간 글로벌 데이터 업데이트보기",
   "Hyperion": "하이페리온",
   "project_introduction": "프로젝트 소개",
   "data_contribute": "데이터 기여",
