--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -83,9 +83,9 @@
   "services": "服务",
   "remark": "备注",
   "search_or_decode": "搜索 / 解码位置密文",
-  "map3_global_nodes": "map3全球节点",
-  "global_nodes": "全球节点",
-  "global_map_server_nodes": "全球地图服务节点",
+  "map3_global_nodes": "数据展示",
+  "global_nodes": "数据展示",
+  "global_map_server_nodes": "实时查看全球数据更新情况",
   "Hyperion": "海伯利安",
   "project_introduction": "项目介绍",
   "data_contribute": "数据贡献",
