--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -267,9 +267,9 @@
   "require_permission": "Apply for permission",
   "collect_signal_require_telephone": "To collect signal data, you need to obtain phone permissions",
   "open_bluetooth": "Turn on Bluetooth",
-  "please_open_bluetooth": "Please turn on Bluetooth",
+  "please_open_bluetooth": "Bluetooth beacons can effectively assist positioning, please turn on the device Bluetooth",
   "open_wifi": "Turn on WIFI",
-  "please_open_wifi": "Please turn on WIFI",
+  "please_open_wifi": "WIFI signal can assist triangle positioning, please turn on the device WIFI",
   "require_location": "Apply for positioning permission",
   "require_location_message": "Please authorize the use of positioning permissions",
   "open_location_service": "Turn on location services",
