--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -267,9 +267,9 @@
   "require_permission": "申请权限",
   "collect_signal_require_telephone": "采集信号数据，需要获取电话权限",
   "open_bluetooth": "开启蓝牙",
-  "please_open_bluetooth": "请开启蓝牙",
+  "please_open_bluetooth": "蓝牙信标可以有效辅助定位，请开启设备蓝牙",
   "open_wifi": "开启WIFI",
-  "please_open_wifi": "请开启WIFI",
+  "please_open_wifi": "WIFI信号可以辅助三角定位，请开启设备WIFI",
   "require_location": "申请定位授权",
   "require_location_message": "请你授权使用定位功能.",
   "open_location_service": "打开定位服务",
