--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -267,9 +267,9 @@
   "require_permission": "신청 권한",
   "collect_signal_require_telephone": "신호 데이터를 수집하기 위해서는 전화 권한이 필요합니다.",
   "open_bluetooth": "블루투스 열림",
-  "please_open_bluetooth": "블루투스를 여세요.",
+  "please_open_bluetooth": "블루투스 비콘은 효과적으로 포지셔닝을 지원할 수 있습니다. 블루투스를 켜십시오.",
   "open_wifi": "WIFI 시작하기",
-  "please_open_wifi": "WIFI를 켜세요.",
+  "please_open_wifi": "WIFI 신호는 삼각형 위치 결정을 지원할 수 있습니다. 장치를 켜십시오.",
   "require_location": "위치 라이센스 신청",
   "require_location_message": "위치 확인 기능을 사용할 수 있는 권한을 부여해 주십시오.",
   "open_location_service": "위치추적 서비스 열기",
