--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -290,5 +290,8 @@
   "scan_upload_signal_success_hint": "信号数据上传成功",
   "scan_thanks_contribution_signal_hint": "感谢您做的数据贡献！",
   "scan_confirm_upload" : "上传信号数据",
-  "scan_collect_signal_func": "已收集到${num}个信号"
+  "scan_collect_signal_func": "已收集到${num}个信号",
+  "selected_area": "选择地区",
+  "what_region_use_titan": "你在什么地区使用titan?",
+  "select_region_tip": "请选择地区"
 }
