--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -303,5 +303,25 @@
   "user_defined_time_format_hint": "自定义时间，格式 07:00-23:00",
   "business_time": "营业时间",
   "please_select_business_hours_hint": "请选择营业时间",
-  "please_enter_correct_time_format_hint": "请输入正确的时间，例如 07:00-23:00"
+  "please_enter_correct_time_format_hint": "请输入正确的时间，例如 07:00-23:00",
+  "throughout_of_day": "全天（24小时）",
+  "business_time_sunday": "周日",
+  "business_time_monday": "周一",
+  "business_time_tuesday": "周二",
+  "business_time_wednesday": "周三",
+  "business_time_thursday": "周四",
+  "business_time_friday": "周五",
+  "business_time_saturday": "周六",
+  "confirm_info_wrong": "信息有误",
+  "confirm_info_right": "信息正确",
+  "confirm_position_name_func": "名称：${name}",
+  "confirm_position_func": "位置：${address}",
+  "info_is_wrong_please_again_submit_hint": "您提交的信息有误，请重试。",
+  "position_info_confirm": "位置信息确认",
+  "if_confirm_position_info_func": "是否确认$currentResult",
+  "category": "类别",
+  "postal_code": "邮编",
+  "phone_number": "电话",
+  "website": "网址",
+  "work_time": "工作时间"
 }
