[add] add english translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -290,58 +290,65 @@
   "scan_thanks_contribution_signal_hint": "Thank you for your data contribution！",
   "scan_confirm_upload" : "Upload signal data",
   "scan_collect_signal_func": "${Num} signals collected",
-  "data_position_adding": "添加中",
-  "data_save": "存储",
-  "select_category_bookstore": "书店",
-  "select_category_bakery": "西饼店",
-  "select_category_chocolateshop": "巧克力店",
-  "select_category_fabrics": "布艺店",
-  "select_category_healthfood": "健康食品店",
-  "select_category_nailsalon": "美甲店",
-  "select_category": "选择类别",
-  "select_position": "选择位置",
-  "user_defined_time_format_hint": "自定义时间，格式 07:00-23:00",
-  "business_time": "营业时间",
-  "please_select_business_hours_hint": "请选择营业时间",
-  "please_enter_correct_time_format_hint": "请输入正确的时间，例如 07:00-23:00",
-  "throughout_of_day": "全天（24小时）",
-  "business_time_sunday": "周日",
-  "business_time_monday": "周一",
-  "business_time_tuesday": "周二",
-  "business_time_wednesday": "周三",
-  "business_time_thursday": "周四",
-  "business_time_friday": "周五",
-  "business_time_saturday": "周六",
-  "confirm_info_wrong": "信息有误",
-  "confirm_info_right": "信息正确",
-  "confirm_position_name_func": "名称：${name}",
-  "confirm_position_func": "位置：${address}",
-  "info_is_wrong_please_again_submit_hint": "您提交的信息有误，请重试。",
-  "position_info_confirm": "位置信息确认",
-  "if_confirm_position_info_func": "是否确认$currentResult",
-  "category": "类别",
-  "postal_code": "邮编",
-  "phone_number": "电话",
-  "website": "网址",
-  "work_time": "工作时间",
-  "category_cannot_be_empty_hint": "类别不能为空",
-  "take_pictures_must_not_be_empty_hint": "拍摄图片不能为空",
-  "poi_upload_protocol_not_accepted_hint": "地理位置上传协议未接受",
-  "upload_protocol": "上传协议",
-  "geographical_position": "地理位置",
-  "submit": "提交",
-  "detail": "详情",
-  "details_of_street": "街道详情",
-  "house_number": "门牌号码",
-  "please_add_streets_hint": "请添加街道",
-  "please_enter_door_number_hint": "请输入门牌号码",
-  "please_enter_postal_code": "请输入邮政编码",
-  "click_auto_get_hint": "点击自动获取",
-  "scene_photographed": "现场拍照",
-  "please_select_category_hint": "请选择类别",
-  "please_add_business_hours_hint": "请添加营业时间",
-  "store_failed_hint": "存储失败!",
-  "name": "名称",
-  "place_name_cannot_be_empty_hint": "地点名称不能为空",
-  "please_enter_name_of_location_hint": "请输入地点名称"
+  "data_position_adding": "Adding",
+  "data_save": "Store",
+  "select_category_bookstore": "Bookstore",
+  "select_category_bakery": "Bakery store",
+  "select_category_chocolateshop": "Chocolate shop",
+  "select_category_fabrics": "Fabrics",
+  "select_category_healthfood": "Healthfood store",
+  "select_category_nailsalon": "Nailsalon",
+  "select_category": "Select category",
+  "select_position": "Select position",
+  "user_defined_time_format_hint": "User defined time format，e.g: 07:00-23:00",
+  "business_time": "Business time",
+  "please_select_business_hours_hint": "Please select business hours",
+  "please_enter_correct_time_format_hint": "Please enter correct time format, e.g: 07:00-23:00",
+  "throughout_of_day": "Throughout of day（24 hours）",
+  "business_time_sunday": "Sun.",
+  "business_time_monday": "Mon.",
+  "business_time_tuesday": "Tues.",
+  "business_time_wednesday": "Wednes.",
+  "business_time_thursday": "Thurs.",
+  "business_time_friday": "Fri.",
+  "business_time_saturday": "Sta.",
+  "confirm_info_wrong": "Error",
+  "confirm_info_right": "Right",
+  "confirm_position_name_func": "Poi name：${name}",
+  "confirm_position_func": "Poi address：${address}",
+  "info_is_wrong_please_again_submit_hint": "Info is wrong,please again submit。",
+  "position_info_confirm": "POI Confirm",
+  "if_confirm_position_info_func": "If confirm poi $currentResult",
+  "category": "Category",
+  "postal_code": "Postal code",
+  "phone_number": "Phone number",
+  "website": "Website",
+  "work_time": "work time",
+  "category_cannot_be_empty_hint": "category cannot be empty",
+  "take_pictures_must_not_be_empty_hint": "take pictures must not be empty",
+  "poi_upload_protocol_not_accepted_hint": "poi upload protocol not accepted",
+  "upload_protocol": " upload protocol",
+  "geographical_position": "Geo. position",
+  "submit": "Submit",
+  "detail": "Detail",
+  "details_of_street": "Details of street",
+  "house_number": "House number",
+  "please_add_streets_hint": "Please add streets",
+  "please_enter_door_number_hint": "Please enter door number",
+  "please_enter_postal_code": "Please enter postal code",
+  "click_auto_get_hint": "Click Auto Get",
+  "scene_photographed": "Scene Photographed",
+  "please_select_category_hint": "Please select category",
+  "please_add_business_hours_hint": "Please add business hours",
+  "store_failed_hint": "Store failed!",
+  "name": "Name",
+  "place_name_cannot_be_empty_hint": "Place name cannot be empty",
+  "please_enter_name_of_location_hint": "Please enter name of location",
+  "please_enter_category_keywords_hint": "enter category keywords",
+  "no_verifiable_poi_around_hint": "There is no verifiable location information around。",
+  "poi_confirm_title_hint": "Do you believe that the location information is real and that the description of the information is completely correct？",
+  "poi_add_success_hint": "Poi was added successfully",
+  "poi_confirm_success_hint": "Poi confirms success",
+  "unknown_ocations": "Unknown locations",
+  "poi_confirm_title_error": "Do you think the location information does not exist or the information description is wrong, are you sure to submit？"
 }
