[update] update translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -302,8 +302,8 @@
   "select_position": "Select position",
   "user_defined_time_format_hint": "User defined time format，e.g: 07:00-23:00",
   "business_time": "Business time",
-  "please_select_business_hours_hint": "Please select business hours",
-  "please_enter_correct_time_format_hint": "Please enter correct time format, e.g: 07:00-23:00",
+  "please_select_business_hours_hint": "Select business hours",
+  "please_enter_correct_time_format_hint": "Enter correct time format, e.g: 07:00-23:00",
   "throughout_of_day": "Throughout of day（24 hours）",
   "business_time_sunday": "Sun.",
   "business_time_monday": "Mon.",
@@ -323,7 +323,7 @@
   "postal_code": "Postal code",
   "phone_number": "Phone number",
   "website": "Website",
-  "work_time": "work time",
+  "work_time": "Work time",
   "category_cannot_be_empty_hint": "category cannot be empty",
   "take_pictures_must_not_be_empty_hint": "take pictures must not be empty",
   "poi_upload_protocol_not_accepted_hint": "poi upload protocol not accepted",
@@ -333,17 +333,17 @@
   "detail": "Detail",
   "details_of_street": "Details of street",
   "house_number": "House number",
-  "please_add_streets_hint": "Please add streets",
-  "please_enter_door_number_hint": "Please enter door number",
-  "please_enter_postal_code": "Please enter postal code",
+  "please_add_streets_hint": "Add streets",
+  "please_enter_door_number_hint": "Enter door number",
+  "please_enter_postal_code": "Enter postal code",
   "click_auto_get_hint": "Click Auto Get",
   "scene_photographed": "Scene Photographed",
-  "please_select_category_hint": "Please select category",
-  "please_add_business_hours_hint": "Please add business hours",
+  "please_select_category_hint": "Select category",
+  "please_add_business_hours_hint": "Add business hours",
   "store_failed_hint": "Store failed!",
   "name": "Name",
   "place_name_cannot_be_empty_hint": "Place name cannot be empty",
-  "please_enter_name_of_location_hint": "Please enter name of location",
+  "please_enter_name_of_location_hint": "Enter name of location",
   "please_enter_category_keywords_hint": "enter category keywords",
   "no_verifiable_poi_around_hint": "There is no verifiable location information around。",
   "poi_confirm_title_hint": "Do you believe that the location information is real and that the description of the information is completely correct？",
