【update】update translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -350,5 +350,6 @@
   "poi_add_success_hint": "Poi was added successfully",
   "poi_confirm_success_hint": "Poi confirms success",
   "unknown_locations": "Unknown locations",
-  "poi_confirm_title_error": "Do you think the location information does not exist or the information description is wrong, are you sure to submit？"
+  "poi_confirm_title_error": "Do you think the location information does not exist or the information description is wrong, are you sure to submit？",
+  "poi_upload_protocol": "POI Upload Protocol"
 }
