--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -350,5 +350,6 @@
   "poi_add_success_hint": "位置信息添加成功",
   "poi_confirm_success_hint": "位置信息确认成功",
   "unknown_locations": "未知位置",
-  "poi_confirm_title_error": "你认为这个位置信息是不存在或者信息描述有误的，确定提交吗？"
+  "poi_confirm_title_error": "你认为这个位置信息是不存在或者信息描述有误的，确定提交吗？",
+  "poi_upload_protocol": "POI上传协议"
 }
