【update】update translation

--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -256,10 +256,10 @@
   "mainland_china": "Mainland China",
   "other_area": "Others",
   "app_area_setting": "Area",
-  "please_selecte_app_area": "Please set the region of the map",
+  "please_select_app_area": "Please set the region of the map",
   "hyperion_project_intro_url": "https://medium.com/@hyperionsgoffical/what-is-hyperion-mapchain-88c275c1412",
   "click_again_to_exist_app": "press again to exit app",
-  "data_contrebution_with_hyn_wallet_tips": "Data contribution requires a HYN wallet address. Please create or import a HYN wallet first.",
+  "data_contribution_with_hyn_wallet_tips": "Data contribution requires a HYN wallet address. Please create or import a HYN wallet first.",
   "scan_signal_item_title": "Scan nearby signal data",
   "add_poi_item_title": "Add POI information",
   "check_poi_item_title": "Verify POI information",
