--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -256,13 +256,13 @@
   "mainland_china": "中国大陆",
   "other_area": "其他地区",
   "app_area_setting": "区域",
-  "please_selecte_app_area": "请设置地图使用区域",
+  "please_select_app_area": "请设置地图使用区域",
   "hyperion_project_intro_url": "https://shimo.im/docs/GDp72cj3ATwEB7ke/read",
   "click_again_to_exist_app": "再按一下退出程序",
-  "data_contrebution_with_hyn_wallet_tips": "数据贡献需要有HYN地址，请先创建 或导入HYN钱包。",
+  "data_contribution_with_hyn_wallet_tips": "数据贡献需要有HYN地址，请先创建 或导入HYN钱包。",
   "scan_signal_item_title": "扫描附近信号",
   "add_poi_item_title": "添加附近地点",
-  "check_poi_item_title": "添加附近地点",
+  "check_poi_item_title": "验证附近地点",
   "switch_contribute_address": "切换地址",
   "require_permission": "申请权限",
   "collect_signal_require_telephone": "采集信号数据，需要获取电话权限",
