update some word

--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -318,15 +318,14 @@
   "confirm_position_func": "位置：${address}",
   "info_is_wrong_please_again_submit_hint": "您提交的信息有误，请重试。",
   "position_info_confirm": "位置信息确认",
-  "if_confirm_position_info_func": "是否确认$currentResult",
   "category": "类别",
   "postal_code": "邮编",
   "phone_number": "电话",
   "website": "网址",
   "work_time": "工作时间",
-  "category_cannot_be_empty_hint": "类别不能为空",
-  "take_pictures_must_not_be_empty_hint": "拍摄图片不能为空",
-  "poi_upload_protocol_not_accepted_hint": "地理位置上传协议未接受",
+  "category_cannot_be_empty_hint": "请选择地点类别",
+  "take_pictures_must_not_be_empty_hint": "请添加地点现场照片",
+  "poi_upload_protocol_not_accepted_hint": "请接受地点上传协议",
   "upload_protocol": "上传协议",
   "geographical_position": "",
   "submit": "提交",
