--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -300,7 +300,7 @@
   "select_category_nailsalon": "Nailsalon",
   "select_category": "Select category",
   "select_position": "Select position",
-  "user_defined_time_format_hint": "User defined time format，e.g: 07:00-23:00",
+  "user_defined_time_format_hint": "User defined time format",
   "business_time": "Business time",
   "please_select_business_hours_hint": "Select business hours",
   "please_enter_correct_time_format_hint": "Enter correct time format, e.g: 07:00-23:00",
@@ -351,5 +351,6 @@
   "poi_confirm_success_hint": "Poi confirms success",
   "unknown_locations": "Unknown locations",
   "poi_confirm_title_error": "Do you think the location information does not exist or the information description is wrong, are you sure to submit？",
-  "poi_upload_protocol": "POI Upload Protocol"
+  "poi_upload_protocol": "POI Upload Protocol",
+  "please_input_custom_time_hint": "Please input custom time"
 }
