--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -291,7 +291,6 @@
   "scan_confirm_upload" : "Upload signal data",
   "scan_collect_signal_func": "${Num} signals collected",
   "data_position_adding": "Adding",
-  "data_save": "Store",
   "select_category_bookstore": "Bookstore",
   "select_category_bakery": "Bakery store",
   "select_category_chocolateshop": "Chocolate shop",
@@ -339,7 +338,7 @@
   "scene_photographed": "Scene Photographed",
   "please_select_category_hint": "Select category",
   "please_add_business_hours_hint": "Add business hours",
-  "store_failed_hint": "Store failed!",
+  "add_failed_hint": "Add failed!",
   "name": "Name",
   "place_name_cannot_be_empty_hint": "Place name cannot be empty",
   "please_enter_name_of_location_hint": "Enter name of location",
