--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -291,7 +291,6 @@
   "scan_confirm_upload" : "신호 데이터 업로드",
   "scan_collect_signal_func": "${Num} 개의 신호 수집",
   "data_position_adding": "添加中",
-  "data_save": "存储",
   "select_category_bookstore": "书店",
   "select_category_bakery": "西饼店",
   "select_category_chocolateshop": "巧克力店",
@@ -339,7 +338,7 @@
   "scene_photographed": "现场拍照",
   "please_select_category_hint": "请选择类别",
   "please_add_business_hours_hint": "请添加营业时间",
-  "store_failed_hint": "存储失败!",
+  "add_failed_hint": "存储失败!",
   "name": "名称",
   "place_name_cannot_be_empty_hint": "地点名称不能为空",
   "please_enter_name_of_location_hint": "请输入地点名称",
