--- a/res/values/strings_zh_CN.arb
+++ b/res/values/strings_zh_CN.arb
@@ -353,5 +353,6 @@
   "select_position_please_again_hint": "选择位置失败，请重试",
   "get_poi_fail_please_again": "获取位置信息失败，请先定位地图到你所在位置。",
   "please_input_custom_time_hint": "请填写自定义时间",
-  "no_remark": "无备注"
+  "no_remark": "无备注",
+  "post_my_check": "提交验证"
 }
