--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -354,5 +354,5 @@
   "get_poi_fail_please_again": "Failed to obtain location information, please locate the map to your location first。",
   "please_input_custom_time_hint": "Please input custom time",
   "no_remark": "No remark",
-  "post_my_check": "提交验证"
+  "post_my_check": "Post my check"
 }
